frontal/overlays/aws1/productpage-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: productpage
  namespace: bookstore-kustomize
  labels:
    app: productpage
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: productpage
              servicePort: 9080
